--- a/src/main/resources/adminDashboard.fxml
+++ b/src/main/resources/adminDashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
@@ -9,12 +10,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminDashboard">
+<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminDashboard">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);" BorderPane.alignment="CENTER">
          <Text layoutX="20.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADMIN DASHBOARD" textAlignment="CENTER" wrappingWidth="159.73675537109375">
@@ -358,7 +361,7 @@
                   <Font name="Berlin Sans FB Demi Bold" size="12.0" />
                </font>
             </Text>
-            <Button layoutX="840.0" layoutY="17.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="42.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
+            <Button fx:id="back" layoutX="840.0" layoutY="17.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="42.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                </font>
@@ -367,6 +370,81 @@
       </AnchorPane>
    </top>
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane layoutX="140.0" layoutY="25.0" prefHeight="470.0" prefWidth="360.0" style="-fx-background-color: black; -fx-background-radius: 10 10 10 10;" />
+            <AnchorPane layoutX="150.0" layoutY="35.0" prefHeight="450.0" prefWidth="340.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9); -fx-background-radius: 10 10 10 10;">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="385.0" layoutX="14.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="6.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color red="0.09345029294490814" green="0.49473685026168823" blue="0.15364328026771545" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="0.46829268292682924">
+                                 <color>
+                                    <Color red="0.2494736909866333" green="0.8315789699554443" blue="0.33678945899009705" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="385.0" layoutX="30.0" layoutY="51.0" stroke="BLACK" strokeType="INSIDE" width="6.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color red="0.09345029294490814" green="0.49473685026168823" blue="0.15364328026771545" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="0.46829268292682924">
+                                 <color>
+                                    <Color red="0.2494736909866333" green="0.8315789699554443" blue="0.33678945899009705" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <ImageView fitHeight="90.0" fitWidth="98.0" layoutX="133.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/icon-admin.png" />
+                     </image>
+                     <effect>
+                        <Lighting diffuseConstant="0.71" specularConstant="2.0" specularExponent="5.32" surfaceScale="1.77">
+                           <bumpInput>
+                              <Shadow />
+                           </bumpInput>
+                           <light>
+                              <Light.Distant azimuth="125.0" elevation="360.0">
+                                 <color>
+                                    <Color green="1.0" blue="0.5" />
+                                 </color>
+                              </Light.Distant>
+                           </light>
+                        </Lighting>
+                     </effect>
+                  </ImageView>
+                  <Label alignment="CENTER" layoutX="87.0" layoutY="179.0" prefHeight="34.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-radius: 10 10 10 10; -fx-border-width: 0 0 2 0;" text="name" />
+                  <Label alignment="CENTER" layoutX="84.0" layoutY="273.0" prefHeight="34.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-radius: 10 10 10 10; -fx-border-width: 0 0 2 0;" text="gender" />
+                  <Label alignment="CENTER" layoutX="87.0" layoutY="226.0" prefHeight="34.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-radius: 10 10 10 10; -fx-border-width: 0 0 2 0;" text="age" />
+               </children>
+            </AnchorPane>
+         </children></AnchorPane>
    </center>
 </BorderPane>
