--- a/src/main/resources/managerDashboard.fxml
+++ b/src/main/resources/managerDashboard.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.Light.Distant?>
 <?import javafx.scene.effect.Lighting?>
 <?import javafx.scene.effect.Shadow?>
@@ -9,11 +10,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -80,7 +82,7 @@
                   <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                </font>
             </Button>
-            <Button layoutX="19.0" layoutY="323.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="162.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Sales History" textFill="#b6fcca">
+            <Button layoutX="19.0" layoutY="323.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="162.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Request Drug" textFill="#b6fcca">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                </font>
@@ -185,9 +187,9 @@
                   </Lighting>
                </effect>
             </ImageView>
-            <ImageView fitHeight="18.0" fitWidth="27.0" layoutX="36.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="16.0" fitWidth="17.0" layoutX="36.0" layoutY="333.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/clipboard-list-check.png" />
+                  <Image url="@images/list-check.png" />
                </image>
                <effect>
                   <Lighting diffuseConstant="0.71" specularConstant="0.6" specularExponent="2.38" surfaceScale="3.05">
@@ -303,7 +305,7 @@
                   </RadialGradient>
                </fill>
             </Text>
-            <Button layoutX="842.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="43.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
+            <Button fx:id="back" layoutX="842.0" layoutY="14.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="43.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
                <font>
                   <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                </font>
@@ -355,10 +357,83 @@
       </AnchorPane>
    </top>
    <center>
-      <ImageView fitHeight="501.0" fitWidth="666.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@images/pharmacist-doctor-patient-drugstore-client-woman-buys-drugs-pharmacy-pharmacist-doctor-patient-153793938-removebg-preview.png" />
-         </image>
-      </ImageView>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane layoutX="143.0" layoutY="25.0" prefHeight="470.0" prefWidth="360.0" style="-fx-background-color: black; -fx-background-radius: 10 10 10 10;" />
+            <AnchorPane layoutX="153.0" layoutY="35.0" prefHeight="450.0" prefWidth="340.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9); -fx-background-radius: 10 10 10 10;">
+               <children>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="380.0" layoutX="23.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" width="6.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color red="0.031111111864447594" green="0.4000000059604645" blue="0.1540740728378296" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="0.548780487804878">
+                                 <color>
+                                    <Color red="0.2610526382923126" green="0.75789475440979" blue="0.2941754460334778" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" height="380.0" layoutX="39.0" layoutY="56.0" stroke="BLACK" strokeType="INSIDE" width="6.0">
+                     <fill>
+                        <LinearGradient endX="1.0" endY="1.0">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color red="0.031111111864447594" green="0.4000000059604645" blue="0.1540740728378296" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="0.548780487804878">
+                                 <color>
+                                    <Color red="0.2610526382923126" green="0.75789475440979" blue="0.2941754460334778" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="1.0" green="1.0" blue="1.0" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </LinearGradient>
+                     </fill>
+                  </Rectangle>
+                  <Label alignment="CENTER" layoutX="86.0" layoutY="170.0" prefHeight="33.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-width: 0 0 2 0; -fx-border-radius: 10 10 10 10;" text="name" />
+                  <Label alignment="CENTER" layoutX="86.0" layoutY="219.0" prefHeight="33.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-width: 0 0 2 0; -fx-border-radius: 10 10 10 10;" text="age" />
+                  <Label alignment="CENTER" layoutX="86.0" layoutY="265.0" prefHeight="33.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-width: 0 0 2 0; -fx-border-radius: 10 10 10 10;" text="brunch" />
+                  <Label alignment="CENTER" layoutX="86.0" layoutY="312.0" prefHeight="33.0" prefWidth="188.0" style="-fx-border-color: green; -fx-border-width: 0 0 2 0; -fx-border-radius: 10 10 10 10;" text="ID" />
+                  <ImageView fitHeight="94.0" fitWidth="83.0" layoutX="142.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/manager.jpg" />
+                     </image>
+                     <effect>
+                        <Lighting diffuseConstant="0.71" specularConstant="0.6" specularExponent="2.38" surfaceScale="3.05">
+                           <bumpInput>
+                              <Shadow />
+                           </bumpInput>
+                           <light>
+                              <Light.Distant azimuth="0.0" elevation="188.26">
+                                 <color>
+                                    <Color green="1.0" blue="0.11764705926179886" />
+                                 </color>
+                              </Light.Distant>
+                           </light>
+                        </Lighting>
+                     </effect>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
    </center>
 </BorderPane>
