--- a/src/main/resources/salesmanSignup.fxml
+++ b/src/main/resources/salesmanSignup.fxml
@@ -18,7 +18,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.salesmanSignup">
    <children>
       <ImageView fitHeight="360.0" fitWidth="440.0" layoutX="51.0" layoutY="183.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
@@ -73,7 +72,7 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Button layoutX="795.0" layoutY="33.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
+      <Button fx:id="back" layoutX="795.0" layoutY="33.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="11.0" />
          </font>
