--- a/src/main/resources/CSS/rolePage.css
+++ b/src/main/resources/CSS/rolePage.css
@@ -8,6 +8,12 @@
 .roleBtn:hover{
  -fx-background-color : linear-gradient(to right, #333300,#00cc66);
 }
+.tableView{
+ -fx-background-color : linear-gradient(to top, #b6fcca,#f7faf9);
+}
+.tableView.hover{
+-fx-background-color : linear-gradient(to bottom, #b6fcca,#f7faf9);
+}
 .roleBgBtn{
 -fx-background-color : linear-gradient(to right,#336600,#00cc66);
 -fx-border-color : #b6fcca;
@@ -27,3 +33,77 @@
 -fx-background-radius : 0 20 0 20;
 -fx-border-width : 4 4 4 4;
 }
+.textBar{
+-fx-background-color :  transparent;
+-fx-border-color :  #02462f;
+-fx-border-width :  0px 0px 3px 0px;
+}
+.imageView{
+-fx-background-color :  transparent;
+-fx-border-color :  #02462f;
+-fx-background-radius : 100%;
+}
+.chartBar{
+-fx-background-color :  transparent;
+}
+.data0.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data1.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data2.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data3.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data4.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data5.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data6.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data7.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data8.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data9.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data10.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+.data11.chartBar{
+-fx-background-color : linear-gradient(to top, #02462f,#01875b);
+-fx-width : 15px;
+-fx-background-radius : 3 3 0 0 ;
+}
+
