--- a/src/main/resources/adminAddRmvBrunch.fxml
+++ b/src/main/resources/adminAddRmvBrunch.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,70 +13,80 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="516.0" prefWidth="700.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminAddRmvBrunch">
+<AnchorPane prefHeight="516.0" prefWidth="700.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminAddRmvBrunch">
    <children>
-      <TableView layoutY="253.0" prefHeight="268.0" prefWidth="700.0">
+      <TableView layoutY="304.0" prefHeight="218.0" prefWidth="700.0" styleClass="tableView" stylesheets="@CSS/rolePage.css">
         <columns>
-          <TableColumn prefWidth="166.39996945858002" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Branch Name" />
-          <TableColumn prefWidth="170.4000244140625" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Location " />
-            <TableColumn prefWidth="185.60000610351562" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Company" />
-            <TableColumn prefWidth="179.199951171875" style="-fx-background-color: #b6fcca; -fx-border-color: #000000;" text="Date" />
+          <TableColumn prefWidth="166.39996945858002" style="-fx-background-color: #b6fcca; -fx-border-color: #02462f; -fx-border-radius: 4 4 4 4; -fx-border-width: 2 2 2 2;" text="Branch Name" />
+          <TableColumn prefWidth="170.4000244140625" style="-fx-background-color: #b6fcca; -fx-border-color: #02462f; -fx-border-radius: 4 4 4 4; -fx-border-width: 2 2 2 2;" text="Location " />
+            <TableColumn prefWidth="181.60000610351562" style="-fx-background-color: #b6fcca; -fx-border-color: #02462f; -fx-border-radius: 4 4 4 4; -fx-border-width: 2 2 2 2;" text="Company" />
+            <TableColumn prefWidth="176.00006103515625" style="-fx-background-color: #b6fcca; -fx-border-color: #02462f; -fx-border-radius: 4 4 4 4; -fx-border-width: 2 2 2 2;" text="Openning Date" />
         </columns>
       </TableView>
-      <TextField layoutX="151.0" layoutY="147.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
-      <TextField layoutX="151.0" layoutY="193.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
-      <TextField layoutX="485.0" layoutY="161.0" prefHeight="18.0" prefWidth="174.0" style="-fx-background-color: transparent; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0; -fx-text-fill: white;" />
-      <Label layoutX="41.0" layoutY="157.0" prefHeight="18.0" prefWidth="109.0" text="Branch Name : " textFill="#b6fcca">
+      <TextField layoutX="141.0" layoutY="133.0" prefHeight="29.0" prefWidth="185.0" styleClass="textBar" stylesheets="@CSS/rolePage.css" />
+      <TextField layoutX="141.0" layoutY="184.0" prefHeight="29.0" prefWidth="186.0" styleClass="textBar" stylesheets="@CSS/rolePage.css" />
+      <TextField layoutX="485.0" layoutY="133.0" prefHeight="29.0" prefWidth="186.0" styleClass="textBar" stylesheets="@CSS/rolePage.css" />
+      <Label layoutX="41.0" layoutY="147.0" prefHeight="18.0" prefWidth="109.0" text="Branch Name : " textFill="#02462f">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="41.0" layoutY="198.0" prefHeight="18.0" prefWidth="71.0" text="Location : " textFill="#b6fcca">
+      <Label layoutX="41.0" layoutY="198.0" prefHeight="18.0" prefWidth="71.0" text="Location : " textFill="#02462f">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="396.0" layoutY="207.0" prefHeight="18.0" prefWidth="71.0" text="Date : " textFill="#b6fcca">
+      <Label layoutX="374.0" layoutY="198.0" prefHeight="18.0" prefWidth="110.0" text="Openning Date : " textFill="#02462f">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="396.0" layoutY="166.0" prefHeight="18.0" prefWidth="71.0" text="Company : " textFill="#b6fcca">
+      <Label layoutX="374.0" layoutY="147.0" prefHeight="18.0" prefWidth="71.0" text="Company : " textFill="#02462f">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="14.0" />
          </font>
       </Label>
-      <DatePicker layoutX="485.0" layoutY="202.0" prefHeight="28.0" prefWidth="174.0" style="-fx-background-color: #b6fcca; -fx-border-color: #b6fcca; -fx-border-width: 0 0 2 0;" />
+      <DatePicker layoutX="485.0" layoutY="193.0" prefHeight="30.0" prefWidth="186.0" styleClass="textBar" stylesheets="@CSS/rolePage.css" />
       <Text layoutX="41.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Or Remove Branch" wrappingWidth="396.5366897583008">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="27.0" />
          </font>
          <fill>
-            <LinearGradient startY="0.5984848633860096">
+            <LinearGradient endX="1.0" endY="1.0" startY="0.5984848633860096">
                <stops>
                   <Stop>
                      <color>
-                        <Color red="0.3688109219074249" green="0.9052631855010986" blue="0.5208057165145874" />
+                        <Color red="0.3410526216030121" green="0.5684210658073425" blue="0.4016842246055603" />
                      </color>
                   </Stop>
-                  <Stop offset="0.004878048780487798">
+                  <Stop offset="0.006729475100942127">
                      <color>
-                        <Color red="0.3688109219074249" green="0.9052631855010986" blue="0.5208057165145874" />
+                        <Color red="0.3410526216030121" green="0.5684210658073425" blue="0.4016842246055603" />
                      </color>
                   </Stop>
                   <Stop offset="0.6433378196500673">
                      <color>
-                        <Color red="0.7137255072593689" green="0.9882352948188782" blue="0.7921568751335144" />
+                        <Color red="0.03617933765053749" green="0.3368421196937561" blue="0.12136711925268173" />
                      </color>
                   </Stop>
                   <Stop offset="1.0">
                      <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
+                        <Color red="0.008576998487114906" green="0.23157894611358643" blue="0.15352825820446014" />
                      </color>
                   </Stop>
                </stops>
             </LinearGradient>
          </fill>
       </Text>
+      <Button layoutX="216.0" layoutY="254.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="110.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="SAVE" textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button layoutX="374.0" layoutY="254.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="CANCEL" textFill="#b6fcca">
+         <font>
+            <Font name="Berlin Sans FB Demi Bold" size="13.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
