--- a/src/main/resources/adminDashboard.fxml
+++ b/src/main/resources/adminDashboard.fxml
@@ -17,7 +17,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminDashboard">
+<BorderPane fx:id="border_pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.pharma.controllers.adminDashboard">
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);" BorderPane.alignment="CENTER">
          <Text layoutX="20.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ADMIN DASHBOARD" textAlignment="CENTER" wrappingWidth="159.73675537109375">
@@ -66,12 +68,12 @@
                <Font name="Berlin Sans FB Demi Bold" size="15.0" />
             </font>
          </Button>
-         <Button layoutX="9.0" layoutY="310.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Drug History" textFill="#b6fcca">
+         <Button fx:id="drugHistory" layoutX="9.0" layoutY="310.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Drug History" textFill="#b6fcca">
             <font>
                <Font name="Berlin Sans FB Demi Bold" size="15.0" />
             </font>
          </Button>
-         <Button layoutX="9.0" layoutY="370.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Logout" textFill="#b6fcca">
+         <Button fx:id="logout" layoutX="9.0" layoutY="370.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Logout" textFill="#b6fcca">
             <font>
                <Font name="Berlin Sans FB Demi Bold" size="15.0" />
             </font>
@@ -81,7 +83,7 @@
                <Font name="Berlin Sans FB Demi Bold" size="15.0" />
             </font>
          </Button>
-         <Button layoutX="9.0" layoutY="249.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Add/Remove Drug" textFill="#b6fcca">
+         <Button fx:id="addRmvDrug" layoutX="9.0" layoutY="249.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="181.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="Add/Remove Drug" textFill="#b6fcca">
             <font>
                <Font name="Berlin Sans FB Demi Bold" size="15.0" />
             </font>
