--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -18,7 +18,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminLogin">
+<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);"
+            xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.pharma.controllers.adminLogin">
    <children>
       <ImageView fx:id="designImage" fitHeight="274.0" fitWidth="349.0" layoutX="91.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -194,7 +196,7 @@
                   </ImageView>
                   <TextField alignment="CENTER" layoutX="58.0" layoutY="149.0" prefHeight="28.0" prefWidth="190.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
                   <TextField alignment="CENTER" layoutX="58.0" layoutY="201.0" prefHeight="28.0" prefWidth="190.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0px 0px 2px 0px;" />
-                  <Button fx:id="adminLogintoDashboard" layoutX="58.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
+                  <Button fx:id="login" layoutX="58.0" layoutY="274.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
