--- a/src/main/resources/managerLogin.fxml
+++ b/src/main/resources/managerLogin.fxml
@@ -90,12 +90,12 @@
                   </ImageView>
                   <TextField alignment="CENTER" layoutX="53.0" layoutY="180.0" prefHeight="28.0" prefWidth="208.0" promptText="user name" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0 0 2 0;" />
                   <TextField alignment="CENTER" layoutX="53.0" layoutY="215.0" prefHeight="28.0" prefWidth="208.0" promptText="password" style="-fx-background-color: transparent; -fx-border-color: #02462f; -fx-border-width: 0 0 2 0;" />
-                  <Button layoutX="50.0" layoutY="272.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="208.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
+                  <Button fx:id="login" layoutX="50.0" layoutY="272.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="208.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="LOGIN" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="50.0" layoutY="311.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="208.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
+                  <Button fx:id="signup" layoutX="50.0" layoutY="311.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="208.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
