--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -18,9 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);"
-            xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.pharma.controllers.adminLogin">
+<AnchorPane fx:id="adminLoginPg" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.adminLogin">
    <children>
       <ImageView fx:id="designImage" fitHeight="274.0" fitWidth="349.0" layoutX="91.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
          <image>
