--- a/src/main/resources/CSS/rolePage.css
+++ b/src/main/resources/CSS/rolePage.css
@@ -14,6 +14,23 @@
 .tableView.hover{
 -fx-background-color : linear-gradient(to bottom, #b6fcca,#f7faf9);
 }
+
+.tableView .table-column{
+    -fx-alignment: CENTER;
+}
+.tableView .column-header-background{
+    -fx-background-color: linear-gradient(to bottom right, #bb1a3a, #722327);
+    -fx-background-radius: 8px 8px 0px 0px;
+    -fx-background-insets: 0 0 0 0;
+}
+.tableView .column-header, .filter{
+    -fx-background-color: transparent;
+    -fx-size: 40px;
+}
+.tableView .column-header .label{
+    -fx-text-fill: #fff;
+}
+
 .roleBgBtn{
 -fx-background-color : linear-gradient(to right,#336600,#00cc66);
 -fx-border-color : #b6fcca;
@@ -46,62 +63,65 @@
 .chartBar{
 -fx-background-color :  transparent;
 }
-.data0.chartBar{
+.chartBar: hover{
+-fx-background-color :  linear-gradient(to left,#336600,#00cc66);
+}
+.data0 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data1.chartBar{
+.data1 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data2.chartBar{
+.data2 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data3.chartBar{
+.data3 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data4.chartBar{
+.data4 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data5.chartBar{
+.data5 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data6.chartBar{
+.data6 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data7.chartBar{
+.data7 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data8.chartBar{
+.data8 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data9.chartBar{
+.data9 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data10.chartBar{
+.data10 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
 }
-.data11.chartBar{
+.data11 .chartBar{
 -fx-background-color : linear-gradient(to top, #02462f,#01875b);
 -fx-width : 15px;
 -fx-background-radius : 3 3 0 0 ;
