--- a/src/main/resources/adminLogin.fxml
+++ b/src/main/resources/adminLogin.fxml
@@ -168,7 +168,7 @@
       </Rectangle>
       <AnchorPane layoutX="462.0" layoutY="103.0" prefHeight="426.0" prefWidth="327.0" style="-fx-background-color: green;">
          <children>
-            <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="415.0" prefWidth="313.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
+            <AnchorPane layoutX="7.0" layoutY="7.0" prefHeight="415.0" prefWidth="313.0" styleClass="anchorPaneee" stylesheets="@CSS/adminLogin.css">
                <children>
                   <ImageView fitHeight="81.0" fitWidth="85.0" layoutX="117.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -199,7 +199,7 @@
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="adminSignup" layoutX="58.0" layoutY="313.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
+                  <Button fx:id="signup" layoutX="58.0" layoutY="313.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="190.0" styleClass="adminLoginBtns" stylesheets="@CSS/adminLogin.css" text="SIGNUP" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="14.0" />
                      </font>
