--- a/src/main/resources/managerSignup.fxml
+++ b/src/main/resources/managerSignup.fxml
@@ -18,7 +18,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.managerSignup">
    <children>
       <ImageView fitHeight="360.0" fitWidth="440.0" layoutX="58.0" layoutY="177.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
@@ -30,7 +29,7 @@
          <children>
             <AnchorPane layoutX="7.0" layoutY="6.0" prefHeight="408.0" prefWidth="314.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
                <children>
-                  <Button layoutX="22.0" layoutY="345.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="262.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="SIGNUP" textFill="#b6fcca">
+                  <Button fx:id="mngrDbSignup" layoutX="22.0" layoutY="345.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="262.0" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="SIGNUP" textFill="#b6fcca">
                      <font>
                         <Font name="Berlin Sans FB Demi Bold" size="15.0" />
                      </font>
@@ -73,7 +72,7 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-      <Button layoutX="799.0" layoutY="32.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
+      <Button fx:id="back" layoutX="799.0" layoutY="32.0" mnemonicParsing="false" styleClass="roleBtn" stylesheets="@CSS/rolePage.css" text="&lt;&lt;&lt;" textFill="#b6fcca">
          <font>
             <Font name="Berlin Sans FB Demi Bold" size="11.0" />
          </font>
