--- a/src/main/resources/salesmanDashboard.fxml
+++ b/src/main/resources/salesmanDashboard.fxml
@@ -17,10 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);"
-            xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.pharma.controllers.salesmanDashboard">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to top, #02462f,#01875b);" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pharma.controllers.salesmanDashboard">
    <children>
       <AnchorPane layoutY="80.0" prefHeight="520.0" prefWidth="200.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9);">
          <children>
@@ -319,7 +316,7 @@
       </AnchorPane>
       <AnchorPane layoutX="359.0" layoutY="113.0" prefHeight="470.0" prefWidth="360.0" style="-fx-background-color: black; -fx-background-radius: 10 10 10 10;">
          <children>
-            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="450.0" prefWidth="340.0" style="-fx-background-color: linear-gradient(to top, #b6fcca,#f7faf9); -fx-background-radius: 10 10 10 10;">
+            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="450.0" prefWidth="340.0" styleClass="anchorPaneee" stylesheets="@CSS/adminLogin.css">
                <children>
                   <Label alignment="CENTER" layoutX="61.0" layoutY="172.0" prefHeight="35.0" prefWidth="230.0" style="-fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 0 0 2 0;" text="name" />
                   <Label alignment="CENTER" layoutX="61.0" layoutY="225.0" prefHeight="35.0" prefWidth="230.0" style="-fx-border-color: black; -fx-border-radius: 10; -fx-border-width: 0 0 2 0;" text="age" />
